reveal-env/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reveal-env
  namespace: reveal-env
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: reveal-env
  template:
    metadata:
      labels:
        app: reveal-env
    spec:
      containers:
      - image: ghcr.io/znz/reveal-env:latest
        imagePullPolicy: IfNotPresent
        name: reveal-env
        ports:
        - containerPort: 9292
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 100Mi
